app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alert-manager-to-service-now
  labels:
    openshift.io/cluster-monitoring: "true"
