app/alert-manager-to-service-now-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: alert-manager-to-service-now
  namespace: alert-manager-to-service-now
  labels:
    app: alert-manager-to-service-now
    app.kubernetes.io/component: alert-manager-to-service-now
    app.kubernetes.io/instance: alert-manager-to-service-now
    app.kubernetes.io/name: alert-manager-to-service-now
    app.kubernetes.io/part-of: alert-manager-to-service-now
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-manager-to-service-now
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: alert-manager-to-service-now
        deployment: alert-manager-to-service-now
    spec:
      containers:
        - name: alert-manager-to-service-now
          image: >-
            image-registry.openshift-image-registry.svc:5000/alert-manager-to-service-now/alert-manager-to-service-now:latest
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
