app/alert-manager-to-service-now-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: alert-manager-to-service-now
  namespace: alert-manager-to-service-now
  labels:
    app: alert-manager-to-service-now
    app.kubernetes.io/component: alert-manager-to-service-now
    app.kubernetes.io/instance: alert-manager-to-service-now
    app.kubernetes.io/name: alert-manager-to-service-now
    app.kubernetes.io/part-of: alert-manager-to-service-now
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: alert-manager-to-service-now
    weight: 100
  port:
    targetPort: 5000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
